[project]
name = "bitemporalorm"
version = "0.1.0"
description = "Bitemporal data storage ORM for PostgreSQL with Polars DataFrames"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "sqlglot>=25.0",
    "connectorx>=0.3",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
bitemporalorm = "bitemporalorm.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitemporalorm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg (common in Typer CLIs)
    "UP042",  # StrEnum — skip, str+Enum is more portable across Python 3.10 compat
    "UP046",  # type parameters syntax — PEP 695, avoid risky rewrite of Generic[T]
]

[tool.ruff.lint.isort]
known-first-party = ["bitemporalorm"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "examples/", "migrations/"]
